--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,11 +3,16 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
+# Copiez le script de démarrage et rendez-le exécutable
+COPY start.sh ./
+RUN chmod +x start.sh
+
+# Copiez le reste du code
 COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "run", "build", "&&", "npm", "run", "preview"]
+# Utilisez le script shell pour démarrer l'application
+CMD ["./start.sh"]
