--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "nodemon": "^3.1.10"
   }
 }
