--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,30 +1,24 @@
-# fly.toml app configuration file pour backend-thrumming-fire-8751
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
+# fly.toml app configuration file
 app = 'backend-thrumming-fire-8751'
 primary_region = 'fra'
 
 [build]
-  # Nous gardons votre configuration build existante
 
 [env]
-  PORT = "3000"  # Ajusté pour correspondre à votre internal_port
+  PORT = "3000"
   NODE_ENV = "production"
 
 [http_service]
-  internal_port = 3000  # Maintenu de votre configuration
+  internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'  # Maintenu de votre configuration
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 0  # Maintenu de votre configuration
+  min_machines_running = 0
   processes = ['app']
 
-# Ajout des vérifications de santé
 [checks]
   [checks.health]
-    port = 3000  # Correspondant à votre internal_port
+    port = 3000
     type = "http"
     interval = "15s"
     timeout = "2s"
@@ -34,6 +28,6 @@ primary_region = 'fra'
     protocol = "http"
 
 [[vm]]
-  memory = '1gb'  # Maintenu de votre configuration
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
