--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
