--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
